@@ -1,4 +1,4 @@
-package run;
+package Interface;
 
 import Client.Player;
 import Client.View.OnBoardCard;
@@ -12,49 +12,124 @@ import Server.Enums.Face;
 import Server.Exception.PlayerNotFoundByNameException;
 import javafx.fxml.FXML;
 import javafx.scene.Group;
-import javafx.scene.control.Button;
-import javafx.scene.control.Label;
+import javafx.scene.control.*;
 import javafx.scene.effect.Glow;
-import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.text.Text;
 
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
+/**
+ * This class is responsible for the logic of the main board scene
+ */
 public class MainBoardSceneController extends SceneController {
+    /**
+     * Constructor
+     */
+    public MainBoardSceneController() {
+        super();
+    }
 
-
+    /**
+     * The images of the player hand and secret achievement cards
+     */
     @FXML
     public ImageView firstCardImage, secondCardImage, thirdCardImage, secretCardImage;
+    /**
+     * The images of the common achievements
+     */
     @FXML
     public ImageView commonAchievement1, commonAchievement2;
+    /**
+     * The images of the gold deck cards
+     */
     @FXML
     public ImageView goldOnDeck, goldOnFloor1, goldOnFloor2;
+    /**
+     * The images of the resource deck cards
+     */
     @FXML
     public ImageView resourceOnDeck, resourceOnFloor1, resourceOnFloor2;
+    /**
+     * The buttons to rotate the cards in the hand to show the other faces
+     */
     @FXML
     public Button rotateFirstCardButton, rotateSecondCardButton, rotateThirdCardButton;
+    /**
+     * The player's manuscript
+     */
     @FXML
     public Group yourManuscript;
+    /**
+     * The label to show that it's the player's turn
+     */
     @FXML
-    public Text yourTurnText;
+    public Label yourTurnLabel;
+    /**
+     * The label to show the end phase
+     */
     @FXML
-    public List<OtherPlayerTab> otherPlayerTabs = new ArrayList<>();
+    public Label endingLabel;
+    /**
+     * The Tabs to show the other players' manuscripts
+     */
+    @FXML
+    public TabPane tabPane;
+    /**
+     * The button to send a chat message
+     */
+    @FXML
+    public Button chatButton;
+    /**
+     * The list of chat messages
+     */
+    @FXML
+    public ListView<String> chatMessages;
+    /**
+    Maps the player name to the tab of the player
+     */
+    public final Map<String, OtherPlayerTab> otherPlayerTabs = new HashMap<>();
+    /**
+     * The player names
+     */
     @FXML
     public Label Player1, Player2, Player3, Player4;
+    /**
+     * The count of how many cards are left in the gold deck
+     */
+    public Label goldDeck_counter;
+    /**
+     * The count of how many cards are left in the resource deck
+     */
+    public Label resourceDeck_counter;
 
     private Face firstFace, secondFace, thirdFace;
     private int selectedCardIndex = -1;
 
-    private Glow glow = new Glow(7);
+    private final Glow glow = new Glow(7);
 
     private Face selectedFace = null;
 
+    /**
+     * Decreases the counter of the gold deck
+     */
+    public void decrementGoldDeckCounter() {
+        int counter = Integer.parseInt(goldDeck_counter.getText());
+        goldDeck_counter.setText(String.valueOf(counter - 1));
+    }
 
-
-
-
+    /**
+     * Decreases the counter of the resource deck
+     */
+    public void decrementResourceDeckCounter() {
+        int counter = Integer.parseInt(resourceDeck_counter.getText());
+        resourceDeck_counter.setText(String.valueOf(counter - 1));
+    }
+    /**
+     * Displays the hand cards of the player
+     */
     public void setHandCards() {
 
         firstCardImage.setImage(getImageFromCard(controller.getHand().get(0), Face.FRONT));
@@ -65,41 +140,50 @@ public class MainBoardSceneController extends SceneController {
         thirdFace = Face.FRONT;
     }
 
+    /**
+     * Displays the secret card of the player
+     * @param card the secret card
+     */
     public void setSecretCard(Card card) {
         secretCardImage.setImage(getImageFromCard(card, Face.FRONT));
     }
 
-    private Image getImageFromCard(Card card, Face face) {
-        return new Image(getClass().getResourceAsStream("/images/Faces/" + card.getFace(face).getImageURI()));
-    }
-
-    private Image getImageFromCard(CardFace cardFace) {
-        return new Image(getClass().getResourceAsStream("/images/Faces/" + cardFace.getImageURI()));
-    }
-
+    /**
+     * Rotates the first card in hand to see the other face
+     */
     public void rotateFirstCard() {
-        firstCardImage.setImage(getImageFromCard(controller.getHand().get(0), firstFace.getOpposite()));
+        firstCardImage.setImage(getImageFromCard(controller.getHand().getFirst(), firstFace.getOpposite()));
         firstFace = firstFace.getOpposite();
     }
 
+    /**
+     * Rotates the second card in hand to see the other face
+     */
     public void rotateSecondCard() {
         secondCardImage.setImage(getImageFromCard(controller.getHand().get(1), secondFace.getOpposite()));
         secondFace = secondFace.getOpposite();
     }
 
+    /**
+     * Rotates the third card in hand to see the other face
+     */
     public void rotateThirdCard() {
         thirdCardImage.setImage(getImageFromCard(controller.getHand().get(2), thirdFace.getOpposite()));
         thirdFace = thirdFace.getOpposite();
     }
 
+    /**
+     * Sets the board cards, the gold/resource/achievement ones
+     * @param deck the deck you want to set
+     */
     public void setBoardCards(Decks deck) {
         if (deck == Decks.GOLD) {
 
-            goldOnDeck.setImage(getImageFromCard(controller.getBoardCards(Decks.GOLD).get(0), Face.FRONT));
+            goldOnDeck.setImage(getImageFromCard(controller.getBoardCards(Decks.GOLD).get(0), Face.BACK));
             goldOnFloor1.setImage(getImageFromCard(controller.getBoardCards(Decks.GOLD).get(1), Face.FRONT));
             goldOnFloor2.setImage(getImageFromCard(controller.getBoardCards(Decks.GOLD).get(2), Face.FRONT));
         } else if (deck == Decks.RESOURCE) {
-            resourceOnDeck.setImage(getImageFromCard(controller.getBoardCards(Decks.RESOURCE).get(0), Face.FRONT));
+            resourceOnDeck.setImage(getImageFromCard(controller.getBoardCards(Decks.RESOURCE).get(0), Face.BACK));
             resourceOnFloor1.setImage(getImageFromCard(controller.getBoardCards(Decks.RESOURCE).get(1), Face.FRONT));
             resourceOnFloor2.setImage(getImageFromCard(controller.getBoardCards(Decks.RESOURCE).get(2), Face.FRONT));
         } else if (deck == Decks.ACHIEVEMENT) {
@@ -109,11 +193,17 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * Sets the card on the floor
+     * @param card the card you want to set
+     * @param deck the deck you want to set (gold - resource - achievement)
+     * @param position the position you want to set (DECK - FIRST_CARD - SECOND_CARD)
+     */
     public void setCardOnFloor(Card card, Decks deck, DeckPosition position) {
         if (deck == Decks.GOLD) {
             switch (position) {
                 case DECK:
-                    goldOnDeck.setImage(getImageFromCard(card, Face.FRONT));
+                    goldOnDeck.setImage(getImageFromCard(card, Face.BACK));
                     break;
                 case FIRST_CARD:
                     goldOnFloor1.setImage(getImageFromCard(card, Face.FRONT));
@@ -125,7 +215,7 @@ public class MainBoardSceneController extends SceneController {
         } else if (deck == Decks.RESOURCE) {
             switch (position) {
                 case DECK:
-                    resourceOnDeck.setImage(getImageFromCard(card, Face.FRONT));
+                    resourceOnDeck.setImage(getImageFromCard(card, Face.BACK));
                     break;
                 case FIRST_CARD:
                     resourceOnFloor1.setImage(getImageFromCard(card, Face.FRONT));
@@ -135,7 +225,7 @@ public class MainBoardSceneController extends SceneController {
                     break;
             }
 
-        } else if (deck == Decks.ACHIEVEMENT);
+        } else if (deck == Decks.ACHIEVEMENT) {
             switch (position) {
                 case FIRST_CARD:
                     commonAchievement1.setImage(getImageFromCard(card, Face.FRONT));
@@ -144,8 +234,13 @@ public class MainBoardSceneController extends SceneController {
                     commonAchievement2.setImage(getImageFromCard(card, Face.FRONT));
                     break;
             }
+        }
     }
 
+    /**
+     * Updates all the floor cards
+     * Gold, Resource and Achievement
+     */
     public void updateAllFloorCards() {
         setCardOnFloor(controller.getBoardCards(Decks.GOLD).get(0), Decks.GOLD, DeckPosition.DECK);
         setCardOnFloor(controller.getBoardCards(Decks.GOLD).get(1), Decks.GOLD, DeckPosition.FIRST_CARD);
@@ -160,17 +255,31 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * Updates the manuscript of the player
+     * This method is called to place a new card
+     * @param name the name of the player, useful to find the correct manuscript to place
+     * @param cardFace the cardface
+     * @param x the x coordinate
+     * @param y the y coordinate
+     */
     public void updateManuscript(String name, CardFace cardFace, int x, int y) {
         if (name.equals(controller.getMyName())) {
-            System.out.println("Placing card in your manuscript");
-            OnBoardCard card = new OnBoardCard(getImageFromCard(cardFace), x, y, null, this);
+            OnBoardCard card = new OnBoardCard(getImageFromCard(cardFace), x, y, this);
             card.place(yourManuscript);
         } else {
-            // piazza la carta nel manoscritto di un altro
+            OtherPlayerTab tab = otherPlayerTabs.get(name);
+            if (tab != null) {
+                OnBoardCard card = new OnBoardCard(getImageFromCard(cardFace), x, y, this);
+                tab.placeCard(card);
+            }
         }
 
     }
 
+    /**
+     * This is called when a player selects/deselects the first card in hand
+     */
     public void firstCardSelected() {
         if (selectedCardIndex == 0) {
             selectedCardIndex = -1;
@@ -181,6 +290,9 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * This is called when a player selects/deselects the second card in hand
+     */
     public void secondCardSelected() {
         if (selectedCardIndex == 1) {
             selectedCardIndex = -1;
@@ -191,6 +303,9 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * This is called when a player selects/deselects the third card in hand
+     */
     public void thirdCardSelected() {
         if (selectedCardIndex == 2) {
             selectedCardIndex = -1;
@@ -201,6 +316,10 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * This method is called to illuminate the selected card
+     * @param index the index of the card in the hand position counting from 0
+     */
     private void illuminateHandCard(int index) {
         switch (index) {
             case 0:
@@ -235,42 +354,34 @@ public class MainBoardSceneController extends SceneController {
                     if(controller.getPlayerByName(controller.getMyName()).getManuscript().isPlaceable(c.x - 1, c.y - 1, face)) {
                         c.BOTTOM_LEFT.setStyle("-fx-background-color: transparent; -fx-border-width: 2; -fx-border-color: gold;");
                         c.BOTTOM_LEFT.setDisable(false);
-                        System.out.println("CornerCardFace: " + face + "botton Bottom_Left enabled");
                     }
                     else {
                         c.BOTTOM_LEFT.setStyle("-fx-background-color: transparent; -fx-border-width: 0;");
                         c.BOTTOM_LEFT.setDisable(true);
-                        System.out.println("CornerCardFace: " + face + "botton Bottom_Left disabled");
                     }
                     if(controller.getPlayerByName(controller.getMyName()).getManuscript().isPlaceable(c.x + 1, c.y - 1, face)){
                         c.BOTTOM_RIGHT.setStyle("-fx-background-color: transparent; -fx-border-width: 2; -fx-border-color: gold;");
                         c.BOTTOM_RIGHT.setDisable(false);
-                        System.out.println("CornerCardFace: " + face + "botton Bottom_Right enabled");
                     }
                     else {
                         c.BOTTOM_RIGHT.setStyle("-fx-background-color: transparent; -fx-border-width: 0;");
                         c.BOTTOM_RIGHT.setDisable(true);
-                        System.out.println("CornerCardFace: " + face + "botton Bottom_right disabled");
                     }
                     if(controller.getPlayerByName(controller.getMyName()).getManuscript().isPlaceable(c.x - 1, c.y + 1, face)){
                         c.TOP_LEFT.setStyle("-fx-background-color: transparent; -fx-border-width: 2; -fx-border-color: gold;");
                         c.TOP_LEFT.setDisable(false);
-                        System.out.println("CornerCardFace: " + face + "botton Top_Left enabled");
                     }
                     else {
                         c.TOP_LEFT.setStyle("-fx-background-color: transparent; -fx-border-width: 0;");
                         c.TOP_LEFT.setDisable(true);
-                        System.out.println("CornerCardFace: " + face + "botton Top_Left disabled");
                     }
                     if(controller.getPlayerByName(controller.getMyName()).getManuscript().isPlaceable(c.x + 1, c.y + 1, face)){
                         c.TOP_RIGHT.setStyle("-fx-background-color: transparent; -fx-border-width: 2; -fx-border-color: gold;");
                         c.TOP_RIGHT.setDisable(false);
-                        System.out.println("CornerCardFace: " + face + "botton Top_Right enabled");
                     }
                     else {
                         c.TOP_RIGHT.setStyle("-fx-background-color: transparent; -fx-border-width: 0;");
                         c.TOP_RIGHT.setDisable(true);
-                        System.out.println("CornerCardFace: " + face + "botton Top_Right disabled");
                     }
                 } catch (PlayerNotFoundByNameException e) {
                     throw new RuntimeException(e);
@@ -287,41 +398,70 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * This method is called when the player places a card
+     * this method calls the controller to place the card
+     * which will ask the server to place the card
+     * @param x the x coordinate
+     * @param y the y coordinate
+     */
     public void placeCard(int x, int y) {
         if (selectedCardIndex >= 0 && selectedCardIndex <= 2)
             controller.askPlayCard(selectedCardIndex, selectedFace, x, y);
     }
 
+    /**
+     * This method is called when the player wants to draw a gold card from the gold deck
+     */
     @FXML
     public void drawFromGoldDeck() {
         controller.askDrawCard(Decks.GOLD, DeckPosition.DECK);
     }
 
+    /**
+     * This method is called when the player wants to draw a resource card from the resource deck
+     */
     @FXML
     public void drawFromResourceDeck() {
         controller.askDrawCard(Decks.RESOURCE, DeckPosition.DECK);
     }
 
+    /**
+     * This method is called when the player wants to draw a gold card from the first position on the floor
+     */
     @FXML
     public void drawFromGoldFloor1() {
         controller.askDrawCard(Decks.GOLD, DeckPosition.FIRST_CARD);
     }
 
+    /**
+     * This method is called when the player wants to draw a gold card from the second position on the floor
+     */
     @FXML
     public void drawFromGoldFloor2() {
         controller.askDrawCard(Decks.GOLD, DeckPosition.SECOND_CARD);
     }
 
+    /**
+     * This method is called when the player wants to draw a resource card from the first position on the floor
+     */
     @FXML
     public void drawFromResourceFloor1() {
         controller.askDrawCard(Decks.RESOURCE, DeckPosition.FIRST_CARD);
     }
 
+    /**
+     * This method is called when the player wants to draw a resource card from the second position on the floor
+     */
     @FXML
     public void drawFromResourceFloor2() {
         controller.askDrawCard(Decks.RESOURCE, DeckPosition.SECOND_CARD);
     }
 
+    /**
+     * This method removes the card from the player hand
+     * @param playerName the name of the player
+     */
     public void removeCardFromHand(String playerName) {
         if (controller.getMyName().equals(playerName)) {
             switch (selectedCardIndex) {
@@ -340,32 +480,44 @@ public class MainBoardSceneController extends SceneController {
         }
     }
 
+    /**
+     * Generates the Tabs to see the other player's manuscript
+     */
     public void setup()
     {
         for(Player p : controller.getPlayers()) {
             if(!p.getName().equals(controller.getMyName())) {
                 OtherPlayerTab tab = new OtherPlayerTab(p.getName());
-                otherPlayerTabs.add(tab);
+                if (!tabPane.getTabs().stream().map(Tab::getText).toList().contains(p.getName())) {
+                    otherPlayerTabs.put(p.getName(), tab);
+                    tabPane.getTabs().add(tab.tab);
+                }
             }
         }
+        updateLeaderBoard();
     }
 
+    /**
+     * Updates the player order in the leaderboard tab
+     */
     public void updateLeaderBoard() {
-        List<Player> sorted = new ArrayList<Player>(controller.getPlayers());
+        System.out.println("Leaderboard updated");
+        List<Player> sorted = new ArrayList<>(controller.getPlayers());
         sorted.sort((p1, p2) -> p2.getPoints() - p1.getPoints());
-        if (sorted.size() > 0) {
-            Player1.setText(sorted.get(0).getName() + " " + sorted.get(0).getPoints());
-        }
-        if (sorted.size() > 1) {
-            Player2.setText(sorted.get(1).getName() + " " + sorted.get(1).getPoints());
-        }
+        Player1.setText("Player: " + sorted.get(0).getName() + " Points: " + sorted.get(0).getPoints());
+        Player2.setText("Player: " + sorted.get(1).getName() + " Points: " + sorted.get(1).getPoints());
         if (sorted.size() > 2) {
-            Player3.setText(sorted.get(2).getName() + " " + sorted.get(2).getPoints());
+            Player3.setText("Player: " + sorted.get(2).getName() + " Points: " + sorted.get(2).getPoints());
+        } else {
+            Player3.setText("");
         }
         if (sorted.size() > 3) {
-            Player4.setText(sorted.get(3).getName() + " " + sorted.get(3).getPoints());
+            Player4.setText("Player: " + sorted.get(3).getName() + " Points: " + sorted.get(3).getPoints());
+        } else {
+            Player4.setText("");
         }
 
     }
+
 
 }
