@@ -8,8 +8,17 @@ import java.util.Map;
 
 import static Server.Enums.Symbol.EMPTY;
 
+/**
+ * This class represents the back face of gold and resource cards
+ */
 public class RegularBackFace extends CornerCardFace {
+    /**
+     * The center symbols of the card
+     */
     private final List<Symbol> centerSymbols;
+    /**
+     * The kingdom symbol of the card
+     */
     private final Symbol kingdom;
     /**
      * Constructor for the RegularBackFace
@@ -24,37 +33,44 @@ public class RegularBackFace extends CornerCardFace {
                 CardCorners.BOTTOM_RIGHT, EMPTY,
                 CardCorners.BOTTOM_LEFT, EMPTY));
         this.centerSymbols = centerSymbols;
-        this.kingdom = centerSymbols.get(0);
+        this.kingdom = centerSymbols.getFirst();
     }
 
-    /**
-     * Returns the center symbols
-     * @return List<Symbol> the center symbols
-     */
+
     public List<Symbol> getCenterSymbols() throws UnsupportedOperationException{
         return centerSymbols;
     }
 
-    /**
-     * Returns the kingdom symbol
-     * @return Symbol the kingdom symbol
-     */
+
     public Symbol getKingdom() throws UnsupportedOperationException{
         return kingdom;
     }
+    /**
+     * @throws UnsupportedOperationException because regular back card faces do not have score requirements
+     */
     @Override
     public Map<Symbol, Integer> getScoreRequirements() throws UnsupportedOperationException{
         throw new UnsupportedOperationException("Regular cards do not have score requirements");
     }
+    /**
+     * @throws UnsupportedOperationException because regular back card faces do not have placement requirements
+     */
     @Override
     public Map<Symbol, Integer> getPlacementRequirements() throws UnsupportedOperationException{
         throw new UnsupportedOperationException("Regular cards do not have placement requirements");
     }
+    /**
+     * @throws UnsupportedOperationException because regular back card faces do not have a score
+     */
     @Override
     public int getScore() throws UnsupportedOperationException{
         throw new UnsupportedOperationException("Regular cards do not have scores");
     }
 
+    /**
+     * Gets a string representation of the card face
+     * @return the string representation
+     */
     public String toString() {
         String toReturn = "Regno: " + kingdom;
         toReturn += "\n" + super.toString() + "\n";
